Corrected heights, styled scrollbars, read all js files for source collection

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3,8 +3,8 @@ body, html {
 }
 
 body {
-    margin:0px;
-    padding: 0px;
+    margin:0;
+    padding: 0;
 }
 
 a {
@@ -16,15 +16,21 @@ a:visited {
     color: #3e9348;
 }
 
+#container {
+    height: 100%;
+    width: 100%;
+}
+
 #paperContainer {
     background-color: #efefef;
+    position: relative;
     width: 65%;
     height: 100%;
     float: right;
 }
 
 #paper {
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 100%;
     top: 0;
@@ -34,7 +40,7 @@ a:visited {
     width: 400px;
     height: 40px;
     background-color: #FFFFFF;
-    box-shadow: 0px 1px 6px rgba(0,0,0,0.2);
+    box-shadow: 0 1px 6px rgba(0,0,0,0.2);
     position: relative;
     z-index: 1000;
     top: 20px;
@@ -64,10 +70,10 @@ a:visited {
     font-weight: normal;
     position: fixed;
     opacity: 1;
-    overflow: hidden;
     background-color: #FFFFFF;
-    box-shadow: 0px 1px 6px rgba(0,0,0,0.2);
+    box-shadow: 0 1px 6px rgba(0,0,0,0.2);
     height: 100%;
+    overflow: auto;
 }
 
 #header {
@@ -96,4 +102,23 @@ a:visited {
     display: block;
     position: relative;
     padding-left: 30px;
+}
+
+/* Let's get this party started */
+::-webkit-scrollbar {
+    width: 3px;
+    height: 3px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    background: rgba(0,0,0,0.3);
 }
